<resources>
    <string name="app_name">Reserva de locales FIA</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="txtNombreCiclo">Nombre ciclo:</string>
    <string name="txtNombreCicloHint">Nombre del ciclo</string>
    <string name="txtInicioCiclo">Inicio del ciclo:</string>
    <string name="txtFinCiclo">Fin del ciclo:</string>
    <string name="txtEstadoCiclo">Estado:</string>
    <string name="txtInicioPeriodoClase">Inicio de clases:</string>
    <string name="txtFinPeriodoClase">Fin de clase:</string>
    <string name="titGestionarCiclo">Gestionar Ciclo</string>
    <string name="txtListaCiclo">Listado de ciclos ingresados:</string>
    <string name="titNuevoCiclo">Nuevo Ciclo</string>
    <string name="btnAgregarNCiclo">Agregar</string>
    <string name="btnLimpiarTextoNCiclo">Limpiar</string>
    <string name="titEditarCiclo">Editar Ciclo</string>
    <string name="btnActualizarCiclo">Editar</string>
    <string name="btnLimpiarTextoECiclo">Limpiar</string>
    <string name="ctxListaCiclosActualizar">Editar</string>
    <string name="ctxListaCiclosEliminar">Eliminar</string>
    <string name="ctxListaCiclosActivarr">Establecer como ciclo activo</string>
    <string name="txtNombreFeriado">Nombre:</string>
    <string name="txtDescripcionFeriado">Descripción:</string>
    <string name="txtFechaInicioFeriado">Fecha de inicio:</string>
    <string name="txtFechaFinFeriado">Fecha de fin:</string>
    <string name="txtCicloFeriado">Ciclo:</string>
    <string name="txtEstadoReservas">Reservas:</string>
    <string name="spnCicloPrompt">Seleccione un ciclo</string>
    <string name="txtReservasFeriado">Reservas:</string>
    <string name="rbReservasBloqueadas">Bloqueadas</string>
    <string name="rbReservasPermitidas">Permitidas</string>
    <string name="cbFechaUnica">Feriado con fecha única</string>
    <string name="titGestionarFeriado">Gestionar Feriado</string>
    <string name="txtListaFeriado">Listado de feriados ingresados:</string>
    <string name="txtbNombreFeriado">Nombre del feriado</string>
    <string name="btnConsultarFeriadoEnCalendario">Ver en calendario</string>
    <string name="titFeriadosEnCalendario">Feriados</string>
    <string name="titNuevoFeriado">Nuevo Feriado</string>
    <string name="btnAgregarNFeriado">Agregar</string>
    <string name="btnLimpiarTextoNFeriado">Limpiar</string>
    <string name="titEditarFeriado">Editar Feriado</string>
    <string name="btnEditarEFeriado">Editar</string>
    <string name="ctxListaFeriadosActualizar">Editar</string>
    <string name="ctxListaFeriadosEliminar">Eliminar</string>
    <string name="txtNombreUnidad">Nombre unidad:</string>
    <string name="editDescripcion">Descripción:</string>
    <string name="titGestionarUnidad">Gestionar Unidad</string>
    <string name="txtListaUnidad">Listado de unidades ingresadas:</string>
    <string name="txtbNombreUnidad">Nombre de la unidad</string>
    <string name="titNuevoUnidad">Nueva Unidad</string>
    <string name="btnAgregarNUnidad">Agregar</string>
    <string name="btnLimpiarTextoNUnidad">Limpiar</string>
    <string name="titEditarUnidad">Editar Unidad</string>
    <string name="btnEditarEUnidad">Editar</string>
    <string name="btnLimpiarEUnidad">Limpiar</string>
    <string name="txtNombreMateria">Nombre:</string>
    <string name="txtCodigoMateria">Código:</string>
    <string name="txtMasiva">Masiva</string>
    <string name="txtNoMasiva">No masiva</string>
    <string name="txtUnidad">Unidad:</string>
    <string name="titGestionarMateria">Gestionar Materia</string>
    <string name="txtListaMateria">Listado de materias ingresadas</string>
    <string name="txtbNombreMateria">Nombre de la materia</string>
    <string name="titNuevoMateria">Nueva Materia</string>
    <string name="btnAgregarNMateria">Agregar</string>
    <string name="btnLimpiarNMateria">Limpiar</string>
    <string name="titEditarCicloMateria">Editar Materia</string>
    <string name="btnEditarEMateria">Editar</string>
    <string name="btnLimpiarEMateria">Limpiar</string>
    <string name="btnImportarCicloMateria">Importar</string>
    <string name="titExportar">Importar Materias</string>
    <string name="btnExtraer">Buscar</string>
    <string name="btnImportar">Importar</string>
    <string name="txtCodigoCicloMateria">Código de materia:</string>
    <string name="txtCicloMateria">Ciclo:</string>
    <string name="titGestionarCicloMateria">Gestionar Materias del ciclo</string>
    <string name="txtListaCicloMateria">Registros ingresados:</string>
    <string name="txtbNombreCiclo">Código de materia</string>
    <string name="titNuevoCicloMateria">Agregar materia al ciclo</string>
    <string name="btnAgregarNCicloMateria">Agregar</string>
    <string name="btnLimpiarNCicloMateria">Limpiar</string>
    <string name="titEditarMateria">Editar materia del ciclo</string>
    <string name="btnLimpiarECicloMateria">Limpiar</string>
    <string name="txtNombreTipoLocal">Nombre: </string>
    <string name="txtEncargado">Encargado:</string>
    <string name="titGestionarTipoLocal">Gestionar Tipo Local</string>
    <string name="idListadoTiposLocales">Listado de tipos de local:</string>
    <string name="txtbNombreTipoLocal">Nombre del tipo local</string>
    <string name="titNuevoTipoLocal">Nuevo Tipo Local</string>
    <string name="btnAgregarNTipoLocal">Agregar</string>
    <string name="btnLimpiarNTipoLocal">Limpiar</string>
    <string name="titEditarTipoLocal">Editar Tipo Local</string>
    <string name="btnEditarETipoLocal">Agregar</string>
    <string name="btnLimpiarETipoLocal">Limpiar</string>
    <string name="txtNombreLocal">Nombre:</string>
    <string name="txtCapacidad">Capacidad:</string>
    <string name="txtTipoLocal">Tipo local:</string>
    <string name="titGestionarLocal">Gestionar Local</string>
    <string name="idListadoLocales">Listado de locales</string>
    <string name="txtbNombreLocal">Nombre del local</string>
    <string name="titNuevoLocal">Nuevo Local</string>
    <string name="btnAgregarNLocal">Agregar</string>
    <string name="btnLimpiarNLocal">Limpiar</string>
    <string name="titEditarLocal">Editar Local</string>
    <string name="btnEditarELocal">Editar</string>
    <string name="btnLimpiarELocal">Limpiar</string>
    <string name="txtNombreTipoGrupo">Nombre:</string>
    <string name="ctxListaTGActualizar">Editar</string>
    <string name="ctxListaTGEliminar">Eliminar</string>
    <string name="titGestionarTipoGrupo">Gestionar tipo de grupo</string>
    <string name="txtListaTG">Listado de tipo de grupos ingresados:</string>
    <string name="txtbNombreTipoGrupo">Nombre del tipo de grupo</string>
    <string name="titNuevoTipoGrupo">Nuevo Tipo Grupo</string>
    <string name="btnLimpiarNTipoGrupo">Limpiar</string>
    <string name="btnAgregarNTipoGrupo">Agregar</string>
    <string name="titEditarTipoGrupo">Editar Tipo Grupo</string>
    <string name="btnEditarETipoGrupo">Editar</string>
    <string name="btnLimpiarETipoGrupo">Limpiar</string>
    <string name="txtNumero">Número:</string>
    <string name="txtMateria">Nombre materia:</string>
    <string name="txtNuevoNumero">Nuevo numero:</string>
    <string name="txtTipoDeGrupo">Tipo de grupo:</string>
    <string name="txtNuevoTipoGrupo">Nuevo tipo grupo:</string>
    <string name="titGestionarGrupo">Gestionar grupo</string>
    <string name="txtbNombreGrupo">Nombre del grupo</string>
    <string name="titNuevoGrupo">Nuevo grupo</string>
    <string name="btnNuevoNGrupo">Nuevo</string>
    <string name="btnLimpiarNGrupo">Limpiar</string>
    <string name="titEditarGrupo">Editar Grupo</string>
    <string name="btnEditarEGrupo">Editar</string>
    <string name="btnLimpiarEGrupo">Limpiar</string>
    <string name="txtNombreUsuario">Usuario:</string>
    <string name="txtClaveUsuario">Clave:</string>
    <string name="txtNombrePersona">Nombre:</string>
    <string name="txtApellidoPersona">Apellido:</string>
    <string name="txtCorreoPersona">Correo:</string>
    <string name="txtUnidadU">Unidad:</string>
    <string name="txtRol">Rol:</string>
    <string name="titGestionarUsuario">Gestionar Usuario</string>
    <string name="txtListaUsuarios">Usuarios ingresados:</string>
    <string name="NombreUsuario">Nombre del usuario</string>
    <string name="titNuevoUsuario">Nuevo Usuario</string>
    <string name="btnAgregarNUsuario">Agregar</string>
    <string name="btnLimpiarNUsuario">Limpiar</string>
    <string name="titEditarUsuario">Editar Usuario</string>
    <string name="btnEditarEUsuario">Editar</string>
    <string name="btnLimpiarEUsuario">Limpiar</string>
    <string name="txtTipoCoordinacion">Coordinación:</string>
    <string name="txtCódigoUsuario">Código Usuario:</string>
    <string name="txtCódigoMateria">Códgio Materia:</string>
    <string name="txtUsuario">Usuario:</string>
    <string name="txtCMateria">Ciclo Materia:</string>
    <string name="titGestionarCoordinador">Gestionar coordinación</string>
    <string name="txtListadoCoordinadores">Listado de registros:</string>
    <string name="txtbCodigoMateria">Código de materia</string>
    <string name="titNuevoCoordinador">Nueva coordinación</string>
    <string name="btnAgregarNCoordinador">Agregar</string>
    <string name="btnLimpiarNCoordinador">Limpiar</string>
    <string name="titEditarCoordinador">Editar coordinador</string>
    <string name="btnEditarECoordinador">Editar</string>
    <string name="btnLimpiarECoordinador">Limpiar</string>
    <string name="txtEncargadoE">Encargado:</string>
    <string name="txtIdUsuarioE">Id Usuario:</string>
    <string name="titGestionarDia">Gestionar día</string>
    <string name="txtListaDias">Listado de días ingresados:</string>
    <string name="ctxListaDiasActualizar">Editar</string>
    <string name="ctxListaDiasEliminar">Eliminar</string>
    <string name="titActualizarDia">Editar día</string>
    <string name="nombreDia">Nombre:</string>
    <string name="actualizar">Editar</string>
    <string name="btnLimpiarTextoEDía">Limpiar</string>
    <string name="titInsertarDia">Nuevo día</string>
    <string name="insertar">Agregar</string>
    <string name="btnLimpiarTextoNDía">Limpiar</string>
    <string name="txtHoraInicial">Hora de inicio:</string>
    <string name="txtHoraFin">Hora de final:</string>
    <string name="txtListaHorario">Listado de horarios ingresados:</string>
    <string name="titGestionarHorario">Gestionar Horario</string>
    <string name="txtbIdHorario">Hora</string>
    <string name="titNuevoHorario">Nuevo Horario</string>
    <string name="btnAgregarNHorario">Agregar</string>
    <string name="btnLimpiarNHorario">Limpiar</string>
    <string name="titEditarEHorario">Editar Horario</string>
    <string name="btnEditarEHorario">Editar</string>
    <string name="btnLimpiarEHorario">Limpiar</string>
    <string name="titErrorUsuario">Información de sesión inválida</string>
    <string name="txtErrorUsuario">
        \n\nSe ha detectado una incongruencia en su información de usuario o sesión, ha intentado realizar
        operaciones no permitidas según su nivel de usuario.\n\nPor favor, vuelva a intentar ingresar
        con un usuario y contraseña válidos.\n\n
    </string>
    <string name="btnIrALogin">Ir a inicio de sesión</string>
    <string name="txtidUsuario">Id usuario:</string>
    <string name="txtasunto">Asunto:</string>
    <string name="txtTipoSolicitud">Tipo de solicitud:</string>
    <string name="txtEstadoSolicitud">Estado solicitud:</string>
    <string name="txtFechaRespuesta">Fecha de respuesta:</string>
    <string name="txtcomentario">Comentario: </string>
    <string name="txtListaSolicitud">Listado de solicitudes ingresadas:</string>
    <string name="titGestionarSolicitud">Gestionar Solicitud</string>
</resources>