<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    android:padding="15dp"
    tools:context=".Activities.Usuario.NuevoUsuario">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titNuevoUsuario"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />
    <TableRow>

        <TextView android:text="@string/txtNombreUsuario" />
        <EditText
            android:id="@+id/editNombreUsuario"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/txtClaveUsuario" />
        <EditText
            android:id="@+id/editClaveUsuario"
            android:inputType="textPassword"
            android:maxLength="30" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/txtNombrePersona" />
        <EditText
            android:id="@+id/editNombrePersona"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/txtApellidoPersona" />
        <EditText
            android:id="@+id/editApellidoPersona"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/txtCorreoPersona" />
        <EditText
            android:id="@+id/editCorreoPersona"
            android:inputType="textEmailAddress"
            android:maxLength="30" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/txtUnidadU" />
        <Spinner
            android:id="@+id/spinnerUnidadNuevoUsuario"
            android:layout_width="fill_parent"
            android:layout_height="30dp" />

    </TableRow>

    <TableRow>

        <TextView android:text="Rol" />
        <Spinner
            android:id="@+id/spinnerRolNuevoUsuario"
            android:layout_width="fill_parent"
            android:layout_height="30dp" />

    </TableRow>

    <TableRow>

        <Button
            android:onClick="btnAgregarNUsuario"
            android:text="@string/btnAgregarNUsuario"
            />

        <Button
            android:onClick="btnLimpiarNUsuario"
            android:text="@string/btnLimpiarNUsuario" />
    </TableRow>

    <Button
        android:onClick="btnRegresarNUsuario"
        android:text="@string/btnRegresarNUsuario"
        tools:ignore="OnClick" />
</TableLayout>