<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".NuevoGrupo">

    <TextView
        android:text="@string/titNuevoGrupo"
        android:textSize="30sp"
        android:paddingBottom="5dp"/>

    <TableRow>
        <TextView
            android:text="@string/txtNumero"/>

        <EditText
            android:id="@+id/editNumero"
            android:inputType="number"
            android:maxLength="30"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/txtMateria"/>

        <EditText
            android:id="@+id/editMateria"
            android:inputType="text"
            android:maxLength="30"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/txtTipoDeGrupo"/>

        <Spinner
            android:id="@+id/spinTipoGrupo" />
    </TableRow>

<TableRow>

    <Button
        android:onClick="btnNuevoNGrupo"
        android:text="@string/btnNuevoNGrupo"
        tools:ignore="OnClick" />

    <Button
        android:onClick="btnLimpiarNGrupo"
        android:text="@string/btnLimpiarNGrupo"
        tools:ignore="OnClick" />
</TableRow>


    <Button
        android:onClick="btnRegresarNGrupo"
        android:text="@string/btnRegresarNGrupo"
        tools:ignore="OnClick" />

</TableLayout>