<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".Activities.Grupo.EditarGrupo">

    <TextView
        android:text="@string/titEditarGrupo"
        android:textSize="30sp"
        android:paddingBottom="5dp"/>

    <TableRow>
        <TextView
            android:text="@string/txtNuevoNumero"/>

        <EditText
            android:id="@+id/editNumero"
            android:inputType="number"
            android:maxLength="30"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/txtMateria"/>
        <Spinner
            android:id="@+id/spinMateriaEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/txtNuevoTipoGrupo"/>

        <Spinner
            android:id="@+id/spinTipoGrupoEdit" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="btnEditarEGrupo"
            android:text="@string/btnEditarEGrupo" />

        <Button
            android:onClick="btnLimpiarEGrupo"
            android:text="@string/btnLimpiarEGrupo"
            tools:ignore="OnClick" />
    </TableRow>


    <Button
        android:onClick="btnRegresarEGrupo"
        android:text="@string/btnRegresarEGrupo"
        tools:ignore="OnClick" />

</TableLayout>