<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".Activities.Local.NuevoLocal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titEditarLocal"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />
    <TableRow>

        <TextView android:text="@string/txtNombreLocal" />
        <EditText
            android:id="@+id/editNombreLocal"
            android:inputType="text"
            android:maxLength="25" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/txtCapacidad" />
        <EditText
            android:id="@+id/editCapacidad"
            android:inputType="numberDecimal"
            android:maxLength="30"
            />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/txtTipoLocal" />
        <Spinner
            android:id="@+id/spinnerTipoLocal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>

        <Button
            android:onClick="btnEditarELocal"
            android:text="@string/btnEditarELocal"
            tools:ignore="OnClick" />

        <Button
            android:onClick="btnLimpiarELocal"
            android:text="@string/btnLimpiarELocal"
            tools:ignore="OnClick" />
    </TableRow>
    <Button
        android:onClick="btnRegresarELocal"
        android:text="@string/btnRegresarELocal"
        tools:ignore="OnClick" />
</TableLayout>