<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".Activities.Coordinacion.NuevoCoordinacion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titNuevoCoordinador"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />
    <TableRow>

        <TextView android:text="@string/txtTipoCoordinacion" />
        <EditText
            android:id="@+id/editTipoCoordinacion"
            android:inputType="text"
            android:maxLength="25" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/txtUsuario" />
        <Spinner
            android:id="@+id/UsuarioSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/txtCMateria" />
        <Spinner
            android:id="@+id/CMateriaSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>

        <Button
            android:onClick="btnAgregarNCoordinador"
            android:text="@string/btnAgregarNCoordinador"
            tools:ignore="OnClick" />

        <Button
            android:onClick="btnLimpiarNCoordinador"
            android:text="@string/btnLimpiarNCoordinador"
            tools:ignore="OnClick" />
    </TableRow>
    <Button
        android:onClick="btnRegresarNCoordinador"
        android:text="@string/btnRegresarNCoordinador"
        tools:ignore="OnClick" />


</TableLayout>