<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".Activities.TipoLocal.EditarTipoLocal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titEditarTipoLocal"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />
    <TableRow>

        <TextView android:text="@string/txtNombreTipoLocal" />
        <EditText
            android:id="@+id/editNombreTipoLocal"
            android:inputType="text"
            android:maxLength="25" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/txtEncargado" />
        <Spinner
            android:id="@+id/spinnerEncargado"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>

        <Button
            android:onClick="btnEditarETipoLocal"
            android:text="@string/btnEditarETipoLocal"
            tools:ignore="OnClick" />

        <Button
            android:onClick="btnLimpiarETipoLocal"
            android:text="@string/btnLimpiarETipoLocal"
            tools:ignore="OnClick" />
    </TableRow>

</TableLayout>