<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".Activities.CicloMateria.NuevoCicloMateria">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titNuevoCicloMateria"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

    <TableRow>

        <TextView android:text="@string/txtMateria" />
        <Spinner
            android:id="@+id/spinnerMateria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </TableRow>
    <TableRow>

        <TextView android:text="@string/txtCicloMateria" />
        <Spinner
            android:id="@+id/spinnerCicloMateria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </TableRow>
    <TableRow>

        <Button
            android:onClick="btnAgregarNCicloMateria"
            android:text="@string/btnAgregarNCicloMateria"
            tools:ignore="OnClick" />

        <Button
            android:onClick="btnLimpiarNCicloMateria"
            android:text="@string/btnLimpiarNCicloMateria"
            tools:ignore="OnClick" />
    </TableRow>

    <Button
        android:onClick="btnRegresarNCicloMateria"
        android:text="@string/btnRegresarNCicloMateria"
        tools:ignore="OnClick" />


</TableLayout>