<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft= "16dp"
    android:paddingRight= "16dp"
    android:paddingTop="8dp">

    <!-- Título -->
    <TextView
        android:text="@string/titErrorUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:paddingBottom="5dp"/>

    <!-- Texto de error -->
    <TextView
        android:text="@string/txtErrorUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity=""
        android:paddingBottom="5dp"/>

    <!-- Botón ir a inicio de sesión -->
    <Button
        android:id="@+id/btnIrALogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnIrALogin"
        android:onClick="irALogin"/>

</LinearLayout>