<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IniciarSesion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="117dp"
            android:layout_height="198dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="15dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/logoues" />
    </RelativeLayout>

    <EditText
        android:id="@+id/txtNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="ignore"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_margin="15dp"
        />

    <EditText
        android:id="@+id/txtClaveUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:autofillHints="ignore"

        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="64dp"
        android:text="@string/action_sign_in"
        android:onClick="ingresar"
        />



</LinearLayout>