<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Título -->
            <TextView
                android:text="@string/titInsertarDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:paddingBottom="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <!-- Nombre día -->
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="0dp"
                    android:layout_weight="0.85"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/nombreDia" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1.15"
                    android:imeOptions="actionNext"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:id="@+id/editNombreDia"
                    android:inputType="text"
                    android:maxLength="25"/>
            </LinearLayout>

            <!-- Botones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/btnLimpiarTextoNDía"
                    android:onClick="btnLimpiarTextoNDía"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/insertar"
                    android:onClick="insertarDia"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>